@@ -68,9 +68,9 @@ public class TestInstallUtil {
 		Process proc;
 		BufferedReader br = null;
 		String errorMsg = null;
-		String[] command = new String[] { "mysql", "--host=" + host, "--port=" + port, "--user=" + user, "--password=" + pwd,
-		        "--database=" + databaseName, "-e", "source " + filePath };
-
+		String[] command = new String[] { "mysql", "--host=" + host, "--port=" + port, "--user=" + user,
+		        "--password=" + pwd, "--database=" + databaseName };
+		
 		//For stand-alone, use explicit path to the mysql executable.
 		String runDirectory = System.getProperties().getProperty("user.dir");
 		File file = Paths.get(runDirectory, "database", "bin", "mysql").toFile();
@@ -80,7 +80,9 @@ public class TestInstallUtil {
 		}
 
 		try {
-			proc = Runtime.getRuntime().exec(command);
+			ProcessBuilder pb = new ProcessBuilder(command);
+			pb.redirectInput(new File(filePath));
+			proc = pb.start();
 			try {
 				br = new BufferedReader(new InputStreamReader(proc.getErrorStream(), StandardCharsets.UTF_8));
 				String line;
